--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>title</title>
   </head>
   <body>
-  
+    <h1>Ciao</h1>
+    <h2>Ciao Ciao</h2>
+    <p>Ciao Ciao Ciao</p>
   </body>
 </html>
